CSRF removed.  The worst thing a CSRF attack would ever do is submit a POST to the add event API.

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/no_user.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/no_user.html
@@ -2,7 +2,7 @@
 {% load oafilters %}
 {% block content %}
 
-<form id="event" action="/api/post/" method="post" class="form-horizontal">{% csrf_token %}
+<form id="event" action="/api/post/" method="post" class="form-horizontal">
 
     <p>Something went wrong.  You'll need to create a new bookmarklet.</p>
 
